# Simulation-Jeux

./: 50mission.py  Cargo.toml  Simulation.py  requirements.txt
.devcontainer/: devcontainer.json
analysis/: 50missions.ipynb
rust/common/: Cargo.toml
rust/common/src/: lib.rs
rust/common/src/policies/: min_max.rs  mod.rs  optimistic.rs  random.rs
rust/jeu_50missions/: Cargo.toml
rust/jeu_50missions/src/: dumper.rs  main.rs  simulation.rs
rust/jeu_50missions/src/game/: card.rs  constants.rs  mod.rs  serialize.rs  setup.rs  state.rs  types.rs
rust/jeu_50missions/src/game/missions/: list.rs  mod.rs  predicates.rs
