[package]
name = "jeu_50missions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "50missions"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

fastrand="2"
common = { path = "../common" }
smallvec = { version = "1", features = ["serde"] }
indicatif = "0.18.3"
